# og-image-generator

./: .buildspec.yaml  .gitignore  .release  Dockerfile  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: push-to-registry.yaml  release.yaml
cloudformation/: cicd-pipeline.yaml
src/binx_og_image_generator/: __main__.py  generator.py  gravatar.py  logger.py  themes.py
src/binx_og_image_generator/fonts/: fonts.list
src/binx_og_image_generator/images/: xebia-logo.pxd  xebia-overlay.xcf
tests/: test.sh
